--- a/app/pubspec.yaml
+++ b/app/pubspec.yaml
@@ -1,5 +1,5 @@
 name: app
-description: A new Flutter project.
+description: Projects by Ilia Grigorev
 
 # The following line prevents the package from being accidentally published to
 # pub.dev using `pub publish`. This is preferred for private packages.
@@ -29,6 +29,8 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
 
+  carousel_slider: ^3.0.0
+
 dev_dependencies:
   flutter_test:
     sdk: flutter
@@ -45,9 +47,14 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  # assets:
-  #   - images/a_dot_burr.jpeg
-  #   - images/a_dot_ham.jpeg
+  assets:
+    - images/screenshot1.jpg
+    - images/screenshot2.jpg
+    - images/screenshot3.jpg
+    - images/screenshot4.jpg
+    - images/screenshot5.jpg
+    - images/screenshot6.jpg
+    - images/screenshot7.jpg
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware.
