--- a/app/web/manifest.json
+++ b/app/web/manifest.json
@@ -1,11 +1,11 @@
 {
-    "name": "app",
-    "short_name": "app",
+    "name": "IG",
+    "short_name": "IG",
     "start_url": ".",
     "display": "standalone",
     "background_color": "#0175C2",
     "theme_color": "#0175C2",
-    "description": "A new Flutter project.",
+    "description": "Projects by Ilia Grigorev",
     "orientation": "portrait-primary",
     "prefer_related_applications": false,
     "icons": [
