--- a/app/pubspec.yaml
+++ b/app/pubspec.yaml
@@ -1,4 +1,4 @@
-name: app
+name: iliagrigorevdev
 description: Projects by Ilia Grigorev
 
 # The following line prevents the package from being accidentally published to
