--- a/app/pubspec.yaml
+++ b/app/pubspec.yaml
@@ -55,6 +55,7 @@ flutter:
     - images/screenshot5.jpg
     - images/screenshot6.jpg
     - images/screenshot7.jpg
+    - images/screenshot8.jpg
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware.
