Revert "Renamed app in pubspec.yaml"
This reverts commit 99e839080aa04687c8b8a99ad3146bc789ff879d.

--- a/app/pubspec.yaml
+++ b/app/pubspec.yaml
@@ -1,4 +1,4 @@
-name: iliagrigorevdev
+name: app
 description: Projects by Ilia Grigorev
 
 # The following line prevents the package from being accidentally published to
