--- a/app/pubspec.yaml
+++ b/app/pubspec.yaml
@@ -56,6 +56,8 @@ flutter:
     - images/screenshot6.jpg
     - images/screenshot7.jpg
     - images/screenshot8.jpg
+    - images/screenshot9.jpg
+    - images/screenshot10.jpg
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware.
