--- a/app/pubspec.yaml
+++ b/app/pubspec.yaml
@@ -59,6 +59,7 @@ flutter:
     - images/screenshot9.jpg
     - images/screenshot10.jpg
     - images/screenshot11.jpg
+    - images/screenshot12.jpg
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware.
